Corrige todos os arquivos do backend e confirma funcionamento local